# psweep

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  TODO.md  genindex.html  index.html  mypy.ini  objects.inv  psweep.py  py-modindex.html  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_test.txt  root.html  search.html  searchindex.js  setup.py
.github/: README.md  dependabot.yml
.github/actions/build-docs/: action.yml
.github/workflows/: docs-check.yml  gh-pages.yml  release.yml  tests.yml
_modules/: index.html
_modules/psweep/: cli.html  psweep.html
_sources/: index.rst.txt  root.md
_sources/written/: content.md.txt  index.rst.txt  manual.md
doc/: generate-doc.sh  requirements.txt
doc/source/: _config.yml  _toc.yml  conf.py  index.md  root.md
doc/source/written/: manual.md
examples/: 10multiple_1d_scans.py  10multiple_1d_scans_with_backup.py  20multiple_1d_scans.py  20multiple_1d_scans_with_backup.py  benchmark_shell_command.py  capture_logs.py  repeat_failed.py  save_data_on_disk.py  tree_study.py  vary_1_param.py  vary_1_param_parallel.py  vary_1_param_repeat_same.py  vary_1_param_simulate.py  vary_1_param_study_column.py  vary_1_var.py  vary_2_params.py  vary_2_params_repeat.py  vary_2_vars.py
examples/batch/: 20input.py  30eval.py  clean.sh  run_example.sh
examples/batch/templates/machines/cluster/: info.yaml  jobscript
examples/batch_dask/: dask_control.job  dask_control.slurm  run_psweep.py  run_psweep_jax_gpu.py  slurm_cluster_settings.py
examples/batch_templates/: clean.sh  run_example.sh
examples/batch_templates/templates/calc/: run.py
examples/batch_templates_git/: 10input.py  15input.py  20eval.py  README.md  run_example.sh
examples/batch_templates_git/templates/machines/local/: info.yaml
examples/batch_templates_read_from_db/: 15input.py
examples/batch_templates_read_from_db/templates/calc/: run.py
examples/batch_templates_simulate/: 10input.py  15input.py  clean.sh  run_example.sh
examples/batch_templates_simulate/templates/calc/: run.py
examples/batch_templates_simulate/templates/machines/cluster/: jobscript
examples/batch_with_git/: README.md  run_example.sh
examples/batch_with_git/templates/machines/cluster/: jobscript
examples/multiple_local_1d_scans/: 10run.py  20run.py  clean.sh  run_example.sh
examples/save_data_on_disk/: 10run.py  20eval.py  clean.sh  run_example.sh
psweep/: psweep.py
psweep/tests/: test.py
psweep/tests/files/: results.json  results.json.json2table
src/psweep/: __init__.py  cli.py  psweep.py
src/psweep/tests/: test.py
tests/: test_all.py
written/: content.html  index.html  manual.html
