[project]
name = "psweep"
version = "0.12.0"
authors = [
    {name = "Steve Schmerler", email = "git@elcorto.com"}
]
description = "loop like a pro, make parameter studies fun"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
    "computational-experiment",
    "parameter-sweep",
    "parameter-scan",
    "parameter-study",
    "pandas",
    "database",
]

dependencies = [
    "numpy",
    "pandas >= 0.19.2",
    "pyyaml",
    "joblib",

    # For bin/psweep-db2* scripts
    "docopt",
    "tabulate >= 0.8.2",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]

# We need to sync the ruff version here with the one in
# .pre-commit-config.yaml, ahh well.
dev = [
    "pre-commit",
    "ruff == 0.2.1",
]


# See doc/requirements.txt
#
##doc = [
##    "jupyter-book",
##    "sphinx-autodoc-typehints",
##
##    # For doc/generate-doc.sh
##    "sphinx-autodoc @ git+https://github.com/elcorto/sphinx-autodoc",
##]

dask = [
    "dask",

    # e.g. dask_jobqueue.SLURMCluster
    "dask-jobqueue",

    # dask.distributed, for Client and LocalCluster
    "distributed",
]


[project.scripts]
psweep-checkdir = "psweep.cli:check_calc_dir"


# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
script-files = [
    "bin/psweep-db2json",
    "bin/psweep-db2table",
    "bin/psweep-pull",
    "bin/psweep-push",
]


# We skip the extend-exclude config here since that is only needed for
# "pre-commit run -a" which we only do using ruff. The black config is for
# cases where people run something like "black foo.py" manually.
[tool.black]
line-length = 79


# In examples/**/run.py we have place holders $foo that break parsing.
[tool.ruff]
line-length = 79
lint.ignore = ["E501", "E731", "E722", "F403"]
extend-exclude = [
    "examples/batch_templates_git/templates/calc/run.py",
    "examples/batch_templates/templates/calc/run.py",
]


[tool.mypy]
ignore_missing_imports = true
implicit_optional = true


[build-system]
requires = ["setuptools>=66.1", "wheel"]
build-backend = "setuptools.build_meta"
