[project]
name = "psweep"
version = "0.13.1"
authors = [
    {name = "Steve Schmerler", email = "git@elcorto.com"}
]
description = "loop like a pro, make parameter studies fun"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
    "computational-experiment",
    "parameter-sweep",
    "parameter-scan",
    "parameter-study",
    "pandas",
    "database",
]

dependencies = [
    "numpy",
    "pandas >= 0.19.2",
    "pyyaml",
    "joblib",

    # For bin/psweep-db2* scripts
    "docopt",
    "tabulate >= 0.8.2",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "packaging",
]

# For installing the correct ruff version in CI, see
# .github/workflows/tests.yml .
dev = [
    "pre-commit",
]


# See doc/requirements.txt
#
##doc = [
##    "jupyter-book",
##    "sphinx-autodoc-typehints",
##
##    # For doc/generate-doc.sh
##    "sphinx-autodoc @ git+https://github.com/elcorto/sphinx-autodoc",
##]

dask = [
    "dask",

    # e.g. dask_jobqueue.SLURMCluster
    "dask-jobqueue",

    # dask.distributed, for Client and LocalCluster
    "distributed",
]


[project.scripts]
psweep-checkdir = "psweep.cli:check_calc_dir"


# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
script-files = [
    "bin/psweep-db2json",
    "bin/psweep-db2table",
    "bin/psweep-pull",
    "bin/psweep-push",
]


# In examples/**/run.py we have place holders $foo that break parsing, that's
# why we extend-exclude them here.
[tool.ruff]
line-length = 79
lint.ignore = [
    "E501", # Line too long
    "E722", # Do not use bare except
    "E731", # Do not assign a lambda expression, use a def
    "F403", # from {name} import * used; unable to detect undefined names
]
extend-exclude = [
    "examples/batch_templates_git/templates/calc/run.py",
    "examples/batch_templates/templates/calc/run.py",
]


# We skip the extend-exclude config here since that is only needed for
# "pre-commit run -a" which we only do using ruff. The black config is for
# cases where people run something like "black foo.py" manually.
[tool.black]
line-length = 79


[tool.mypy]
ignore_missing_imports = true
implicit_optional = true


[build-system]
requires = ["setuptools>=66.1", "wheel"]
build-backend = "setuptools.build_meta"
